--- a/JS/index.html
+++ b/JS/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sviat's document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css">
 </head>
-<body>
-    <p>Hello World</p>
-    <!-- <script>
-        alert(1);
-    </script> -->
-    <script src='script.js'></script>
+<body >
+    <div class="main" id="box">
+        <button class="btn btn-warning">1</button>
+        <button class="btn btn-warning">2</button>
+        <button class="btn btn-warning">3</button>
+    </div>
+    <script src='testScript.js'></script>
 </body>
 </html>
